# Ai-search-engine

./: .env.example  .gitignore  LICENSE  Makefile  README.md  dev.ps1  docker-compose.yml  pytest.ini  requirements.txt
api/: main.py
apps/api/: .dockerignore  .env.example  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  __main__.py  config.py  logging.py  main.py  models.py  textutil.py
apps/api/app/cache/: __init__.py  base.py  manager.py  memory.py  sqlite.py
apps/api/app/fetch/: __init__.py  extract.py  fetcher.py
apps/api/app/llm/: __init__.py  client.py  personas.py  tools.py
apps/api/app/news/: __init__.py  feeds.py
apps/api/app/research/: __init__.py  answer.py  citations.py  dedupe.py  modes.py  pipeline.py  rank.py  session.py
apps/api/app/routes/: __init__.py  fetch.py  health.py  news.py  research.py  search.py  settings.py  sources.py
apps/api/app/search/: __init__.py  aggregator.py  base.py  bing.py  brave.py  duckduckgo.py  mojeek.py  searxng.py  wikipedia.py
apps/api/app/security/: __init__.py  ratelimit.py  ssrf.py
apps/api/tests/: conftest.py  test_chat_route.py  test_citations.py  test_context.py  test_dedupe.py  test_extract.py  test_fetch.py  test_news.py  test_personas_tools.py  test_pipeline_api.py  test_rank.py  test_search.py  test_ssrf.py  test_textutil.py
cache/: __init__.py  manager.py  redis_cache.py  sqlite_cache.py
config/: settings.toml
core/: agents.py  config.py  pipeline.py  rotation.py
docs/: adding_a_backend.md  architecture.md  unlimited_tips.md
scripts/: install.sh  run_searxng_docker.sh  (+1 more)
(+82 files in other folders)
