[project]
name = "ai-research-engine-api"
version = "1.0.0"
description = "Grounded AI research engine backend (search, fetch, rank, cite)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# E501: long lines are fine; B008: FastAPI Depends() in defaults; UP042: str+Enum is intentional.
ignore = ["E501", "B008", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
